[package]
name = "cache_lsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version="0.15.3", features=["serde", "rayon"]}
blas-src = { version = "0.8.0", defeault-features = false, optional = true}
rand = {version = "0.8.4", features = ["small_rng"]}
serde = { version = "1.0.130", features = ["derive"] }
rayon = "1.5.1"
num = "0.4.0"
fnv = "1.0.7"
rand_distr = "0.4.2"
ndarray-rand = "0.14.0"
itertools = "0.10.1"
statrs = "0.15.0"
bincode = "1.3.3"
thiserror = "1.0.30"
anyhow = "1.0.45"
